--- a/cluster.yaml
+++ b/cluster.yaml
@@ -5,6 +5,9 @@ metadata:
 servers: 1
 agents: 2
 ports:
-  - port: 8080:80
+  - port: 80:80
+    nodeFilters:
+      - loadbalancer
+  - port: 443:443
     nodeFilters:
       - loadbalancer
